[package]
name = "moqk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.35", features = ["net","rt-multi-thread", "sync", "rt", "macros"]}
hyper = {version = "1.1.0", features = ["server","http1"]}
log = "0.4"
http-body-util = "0.1.0"
bytes = "1.5.0"
pin-project-lite = "0.2.13"
